# Serial-NanoPiAir

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Custom.msg
serial_communicate_cpp/: CMakeLists.txt  README.md  README.txt  package.xml
serial_communicate_cpp/src/: mail_node.cpp  pub_node.cpp  sub_node.cpp
